@@ -24,9 +24,9 @@
 #define DEBUG
 #endif
 
-PulseManager::PulseManager () {
-  pulse_X2Go_ = "/.x2go/pulse";
-
+PulseManager::PulseManager () : pulse_X2Go_("/.x2go/pulse"), pulse_port_(4713),
+                                state_(QProcess::NotRunning), pulse_server_(NULL),
+                                app_dir_(QApplication::applicationDirPath ()) {
   pulse_dir_ = QDir (QDir::homePath ());
   pulse_dir_.mkpath (pulse_dir_.absolutePath () + pulse_X2Go_ + "/tmp");
   pulse_dir_.cd (pulse_X2Go_.mid (1));
@@ -34,14 +34,6 @@ PulseManager::PulseManager () {
   env_ = QProcessEnvironment::systemEnvironment ();
   env_.insert ("HOME", pulse_dir_.absolutePath ());
   env_.insert ("TEMP", pulse_dir_.absolutePath () + "/tmp");
-
-  pulse_port_ = 4713;
-
-  state_ = QProcess::NotRunning;
-
-  pulse_server_ = NULL;
-
-  app_dir_ = QApplication::applicationDirPath ();
 }
 
 PulseManager::~PulseManager () {
